@@ -47,3 +47,6 @@ Robert Jackson <RobertJ@promedicalinc.com>
 
 Justin Grote <justin@grote.name>
     - Improved rsync error reporting code
+
+David Keegel
+    - Fixed race condition in lock file creation, improved error reporting
